<?xml version="1.0"?>
<package format="2">
  <name>darknet_ros</name>
  <version>0.0.0</version>
  <description>simple darknet ros package</description>

  <maintainer email="takaki@todo.todo">takaki</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>libuvc_camera</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>libuvc_camera</exec_depend>

</package>
