<?xml version="1.0"?>
<package>
  <name>darknet_rospy_msgs</name>
  <version>0.0.0</version>
  <description>darknet python ros python msg package</description>
  <maintainer email="takaki@todo.todo">takaki</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
